@@ -37,9 +37,10 @@
 <!ENTITY main.posting.postbutton "&quot;Post Message&quot; (skip preview) button">
 <!ENTITY main.posting.charcounts "Character counters">
 <!ENTITY main.posting.quickpost.caption "QuickPost">
-<!ENTITY main.posting.quickpost.otherbuttons "Show preview/reset buttons">
 <!ENTITY main.posting.quickpost.topics "QuickPost link on topic lists">
 <!ENTITY main.posting.quickpost.messages "QuickPost form on message lists">
+<!ENTITY main.posting.quickpost.htmlbuttons "Show HTML buttons">
+<!ENTITY main.posting.quickpost.otherbuttons "Show preview/reset buttons">
 <!ENTITY main.posting.quickpost.resetconfirm "Confirm resetting post">
 <!ENTITY main.posting.quickpost.resetnewsig "Choose a new signature when resetting post">
 <!ENTITY main.posting.quickpost.aftertopic "After QuickPosting a topic:">
