@@ -6,6 +6,7 @@
     * Workaround Firefox 3 bug that breaks QuickPost and other features when
       third-party cookies are blocked
     * Restore QuickPost reset button with additional functionality
+    * Add HTML buttons to posting
 
 2008-11-01:
     * version 0.6.7
